@@ -1,3 +1,9 @@
+2009-03-03  Carlos Garcia Campos  <carlosgc@gsyc.es>
+
+	* pycvsanaly2/DBContentHandler.py:
+
+	Fix a crash with repositories where paths don't start with '/'.
+	
 2009-02-26  Carlos Garcia Campos  <carlosgc@gsyc.es>
 
 	* pycvsanaly2/DBContentHandler.py:
